src/objects/Auto_Queue__c.object
<CustomObject>
    <description>Used for the automatic assignment of cases in SCE. Developed by Salesforce Professional Services.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Represents if the queue is active</description>
        <inlineHelpText>Is auto assignment currently active for this queue</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Queue_ID__c</fullName>
        <description>Represents the ID of the public group with the same name as the queue</description>
        <label>Queue ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Option__c</fullName>
        <description>Gives to possible options for case assignment: &quot;Continue assignment&quot; and &quot;Leave on queue&quot;</description>
        <label>Queue Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Continue assignment</fullName>
                    <default>true</default>
                    <label>Continue assignment</label>
                </value>
                <value>
                    <fullName>Leave on queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Splits the queus into 5 regions: &quot;Africa &amp; Middle East&quot;, &quot;Americas&quot;, &quot;Asia &amp; Pacific&quot;, &quot;China &amp; North Asia&quot;, &quot;Europe&quot;</description>
        <inlineHelpText>Select the region to which the Auto Queue belongs to.</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa &amp; Middle East</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Asia &amp; Pacific</fullName>
                </value>
                <value>
                    <fullName>China &amp; North Asia</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Auto Queue</label>
    <listViews>
        <fullName>AME_Auto_Queues</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Africa &amp; Middle East</value>
        </filters>
        <label>AME Auto Queues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Queue_ID__c</columns>
        <columns>Queue_Option__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Americas_Auto_Queues</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Americas</value>
        </filters>
        <label>Americas Auto Queues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Asia_Pacific_Auto_Queues</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Asia &amp; Pacific</value>
        </filters>
        <label>Asia &amp; Pacific Auto Queues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>China_N_Asia_Auto_Queues</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>China &amp; North Asia</value>
        </filters>
        <label>China &amp; N.Asia Auto Queues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_Auto_Queues</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Europe</value>
        </filters>
        <label>EUR Auto Queues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Global_Auto_Queues</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Global</value>
        </filters>
        <label>Global Auto Queues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IATAN_Agency_Management</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>IATAN</value>
        </filters>
        <label>IATAN Agency Management</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Auto Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auto Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>